install monolog and add bootstrap

--- a/templates/Homepage/index.html.twig
+++ b/templates/Homepage/index.html.twig
@@ -1,5 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Bem vindo!</h1>
+    <div class="container">
+        <h1 class="display-1">Bem vindo!</h1>
+
+        <p>
+            <a href="#">Criar uma conta</a>
+        </p>
+        <p>
+            <a href="#">Entrar</a>
+        </p>
+    </div>
 {% endblock %}
