add register controller and template

--- a/templates/Homepage/index.html.twig
+++ b/templates/Homepage/index.html.twig
@@ -5,7 +5,7 @@
         <h1 class="display-1 my-5">Vamos começar?</h1>
 
         <p>
-            <a href="#">Criar uma conta</a>
+            <a href="{{ path('app_register_index') }}">Criar uma conta</a>
         </p>
         <p>
             <a href="#">Entrar</a>
