--- a/templates/Homepage/index.html.twig
+++ b/templates/Homepage/index.html.twig
@@ -8,7 +8,7 @@
             <a href="{{ path('app_register_index') }}">Criar uma conta</a>
         </p>
         <p>
-            <a href="#">Entrar</a>
+            <a href="{{ path('app_login_index') }}">Entrar</a>
         </p>
     </div>
 {% endblock %}
