--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,17 +8,14 @@
 
         {% block stylesheets %}
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
-            <style>
-                body {
-                    margin: 4rem;
-                }
-            </style>
         {% endblock %}
     </head>
     <body>
         {% block body "" %}
 
         {% block javascripts %}
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
         {% endblock %}
     </body>
