--- a/templates/Register/index.html.twig
+++ b/templates/Register/index.html.twig
@@ -15,7 +15,7 @@
         {{ form_widget(form) }}
 
         <p class="my-5">
-            <button class="btn btn-outline-primary">Criar</button>
+            <button class="btn btn-dark">Criar</button>
             <a class="btn btn-link" href="{{ path('homepage') }}">Cancelar</a>
         </p>
 
