--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,9 +9,8 @@
         {% block stylesheets %}
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
             <style>
-                .alert {
-                    border-radius: 0;
-                    border: none;
+                .container {
+                    max-width: 32rem;
                 }
             </style>
         {% endblock %}
