--- a/templates/Profile/index.html.twig
+++ b/templates/Profile/index.html.twig
@@ -8,18 +8,19 @@ Meu perfil &ndash; {{ parent() }}
     <div class="container py-5">
         <div class="text-center">
             <img src="https://unsplash.it/120/120" alt="" class="img-thumbnail rounded-circle mb-2">
+
             <h2 class="display-4 text-center">{{ user }}</h2>
+
             <p>{{ 'fulano@example.com' }}</p>
 
             <blockquote class="blockquote font-italic">
                 The slovenly wub might well have said: Many men
                 talk like philosophers and live like fools.
             </blockquote>
-        </div>
 
-        <hr class="mt-5 mb-2">
-        <p class="text-center">
-            <a href="#" class="btn btn-link">Editar perfil</a>
-        </p>
+            <p>
+                <a href="{{ path('app_profile_edit') }}" class="btn btn-link">Editar perfil</a>
+            </p>
+        </div>
     </div>
 {% endblock %}
